--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -6,7 +6,7 @@ $gray: #7A849A;
 $black: #3E424B;
 
 // fonts
-$popin:'Poppins', sans-serif;
+$poppins:'Poppins', sans-serif;
 $oswald:'Oswald', sans-serif;
 $rajdhani: 'Rajdhani', sans-serif;
 
