--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -234,3 +234,32 @@ input:required {
   font-family: $family;
 }
 
+@mixin laptop {
+  @media(min-width: 1200px) and (max-width: 1600px) {
+      @content;
+  }
+}
+
+@mixin lg {
+  @media(min-width: 992px) and (max-width: 1199px) {
+      @content;
+  }
+}
+
+@mixin md {
+  @media(min-width: 768px) and (max-width: 991px) {
+      @content;
+  }
+}
+
+@mixin sm {
+  @media(min-width: 576px) and (max-width: 767px) {
+      @content;
+  }
+}
+
+@mixin xs {
+  @media(max-width: 575px) {
+      @content;
+  }
+}
