--- a/assets/scss/_var.scss
+++ b/assets/scss/_var.scss
@@ -17,8 +17,8 @@ $semi_bold: 600;
 $bold: 700;
 
 // Responsive Variables
-$laptop: 'only screen and (min-width: 1200px) and (max-width: 1600px)';
-$lg : 'only screen and (min-width: 992px) and (max-width: 1199px)';
-$md:'only screen and (min-width: 768px) and (max-width: 991px)';
-$sm: 'only screen and (min-width: 576px) and (max-width: 767px)';
-$xs:'(max-width: 575px)';
+// $laptop: only screen and (min-width: 1200px) and (max-width: 1600px);
+// $lg : only screen and (min-width: 992px) and (max-width: 1199px);
+// $md:only screen and (min-width: 768px) and (max-width: 991px);
+// $sm: only screen and (min-width: 576px) and (max-width: 767px);
+// $xs:(max-width: 575px);
