--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ button, button:hover, button:focus {
 
 body {
   font-family: 'Poppins', sans-serif;
-  line-height: 0px;
 }
 
 .section_title h2 {
@@ -271,6 +270,9 @@ header .container .head_content .menu .m_bar::after {
   position: absolute;
   left: -43px;
   top: -6px;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 header .container .head_content .menu .m_bar li {
@@ -294,6 +296,150 @@ header .container .head_content .menu.active .m_bar li {
 
 header .container .head_content .menu.active .m_bar li:first-child {
   transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 6);
+}
+
+.fullscreen-menu {
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: #3E424B;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+}
+
+.fullscreen-menu .menu-body {
+  min-height: 75vh;
+}
+
+.fullscreen-menu .menu-body .menu-container {
+  min-height: 75vh;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  align-content: stretch;
+}
+
+.fullscreen-menu .menu-body .menu-close {
+  display: flex;
+  align-items: center;
+  padding-top: 39px;
+  justify-content: flex-end;
+  width: 100%;
+  height: 20px;
+}
+
+.fullscreen-menu .menu-body .menu-close .close-bar {
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+  position: relative;
+  line-height: 25px;
+}
+
+.fullscreen-menu .menu-body .menu-close .close-bar::after {
+  content: 'close';
+  position: absolute;
+  left: -43px;
+  top: -5px;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.fullscreen-menu .menu-body .menu-close .close-bar li {
+  width: 24px;
+  height: 3px;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out;
+  transform: matrix(-0.71, 0.71, -0.71, -0.71, 0, -4);
+}
+
+.fullscreen-menu .menu-body .menu-close .close-bar li:first-child {
+  margin-bottom: 7px;
+  transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 6);
+}
+
+.fullscreen-menu .menu-body .main-menu ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.fullscreen-menu .menu-body .main-menu ul li {
+  margin-bottom: 45px;
+}
+
+.fullscreen-menu .menu-body .main-menu ul li a {
+  font-size: 84px;
+  line-height: 110px;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  padding: 0 48px;
+  color: #fff;
+  position: relative;
+}
+
+.fullscreen-menu .menu-body .main-menu ul li a span {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 600;
+}
+
+.fullscreen-menu .menu-body .main-menu ul li a.active, .fullscreen-menu .menu-body .main-menu ul li a:hover {
+  color: transparent;
+  -webkit-text-stroke: 1.5px #7a849a;
+}
+
+.fullscreen-menu .menu-body .main-menu ul li a.active span, .fullscreen-menu .menu-body .main-menu ul li a:hover span {
+  visibility: visible;
+  color: white;
+  -webkit-text-stroke: 0;
+}
+
+.fullscreen-menu .menu-footer {
+  height: 25vh;
+  background-color: #fff;
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+
+.fullscreen-menu .menu-footer .footer-social {
+  width: 100%;
+  min-height: calc(25vh - 63px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fullscreen-menu .menu-footer .footer-social li a {
+  display: inline-block;
+  color: #3E424B;
+  font-size: 20px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  color: #3E424B;
+  transition: background 0.4s ease-in;
+}
+
+.fullscreen-menu .menu-footer .footer-social li a:hover {
+  background: #5787FF;
+  color: #fff;
+}
+
+.fullscreen-menu .menu-footer .copyright-text {
+  width: 100%;
+  text-align: center;
+  height: 23px;
 }
 
 .menu_content {
@@ -417,14 +563,14 @@ header .container .head_content .menu.active .m_bar li:first-child {
 
 .menu_content .bottom .container .c_rights {
   text-align: center;
+  margin-top: 80px;
 }
 
 .menu_content .bottom .container .c_rights h5 {
   color: #3E424B;
   font-size: 16px;
-  line-height: 1.7;
-  padding-bottom: 30px;
-  margin: 0;
+  line-height: 32px;
+  font-weight: 600;
 }
 
 .none.active {
@@ -1284,10 +1430,26 @@ header .container .head_content .menu.active .m_bar li:first-child {
 
 /* Xtra_Small devices 0 - 575 */
 @media (max-width: 575px) {
-  /* ?? section start */
-  /* ?? section end */
-  /* ?? section start */
-  /* ?? section end */
+  .social_links {
+    margin-bottom: 20px !important;
+  }
+  section {
+    padding: 60px 0px;
+  }
+  /* About section start */
+  #about .about_content .col-lg-6 .play_video {
+    margin-top: -15px;
+    white-space: nowrap;
+  }
+  #about_content_2 .container .r_space {
+    padding-left: 15px !important;
+    margin-bottom: 30px;
+  }
+  /* About section end */
+  #footer_area .connect_info p {
+    margin: 0 10%;
+    line-height: 32px;
+  }
 }
 
 /* WE_DO part start */
